--- a/src/styles/cityweather.css
+++ b/src/styles/cityweather.css
@@ -83,7 +83,7 @@
 .weekweather {
     color: white;
     display: grid !important;
-    grid-template-columns: repeat(7,1fr);
+    grid-template-columns: repeat(7, 1fr);
     row-gap: 10px;
     column-gap: 10px;
     padding: 30px 30px;
@@ -105,23 +105,26 @@
 }
 
 @media (width<=1260px) {
-    .weekweather{
-        grid-template-columns: repeat(5,1fr);
+    .weekweather {
+        grid-template-columns: repeat(5, 1fr);
     }
 }
+
 @media (width<=860px) {
-    .weekweather{
-        grid-template-columns: repeat(3,1fr);
+    .weekweather {
+        grid-template-columns: repeat(3, 1fr);
     }
 }
+
 @media (width<=560px) {
-    .weekweather{
-        grid-template-columns: repeat(2,1fr);
+    .weekweather {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
+
 @media (width<=430px) {
-    .weekweather{
-        display: flex ;
-    justify-content: center;
+    .weekweather {
+        display: flex;
+        justify-content: center;
     }
 }
